--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ url: "https://your-username.github.io" # 替换为你的 GitHub Pages URL
 # 设置主题为 minima，并进行一些自定义设置
 theme: minima
 
+# 引入自定义的 CSS 文件
+style: "assets/css/custom.css"
+
 # 主题相关设置
 minima:
   # 修改博客头部显示的图片
